deps/v8/test/message/arrow-invalid-rest.out
*%(basename)s:7: SyntaxError: Rest parameter must be an identifier or destructuring pattern
var f = (...x = 10) => x;
         ^^^^^^^^^
SyntaxError: Rest parameter must be an identifier or destructuring pattern
